Look at this shiny sass

--- a/static/desktop.scss
+++ b/static/desktop.scss
@@ -10,12 +10,12 @@ html, body {
   overflow: hidden;
 }
 
-:not(input):not(textarea),
-:not(input):not(textarea)::after,
-:not(input):not(textarea)::before {
-  -webkit-user-select: none;
-  user-select: none;
-  cursor: default;
+:not(input):not(textarea) {
+  &::after, &::before {
+    -webkit-user-select: none;
+    user-select: none;
+    cursor: default;
+  }
 }
 
 input, button, textarea, :focus {
