--- a/styles/ui/_app.scss
+++ b/styles/ui/_app.scss
@@ -1,3 +1,5 @@
+@import "../mixins";
+
 #desktop-app {
 
   // This is just a dummy wrapper needed because react doesn't like
@@ -27,6 +29,10 @@
     width: 100%;
 
     .app-title { display: none; }
+
+    @include win32 {
+      height: 25px;
+    }
   }
 
   // main non-window chrome wrapper
