Hide title bar when in full screen mode

--- a/styles/ui/_app.scss
+++ b/styles/ui/_app.scss
@@ -33,6 +33,9 @@
     @include win32 {
       height: 25px;
     }
+
+    // Don't ever show the title bar when we're in full screen mode.
+    @include in-fullscreen { display: none; }
   }
 
   // main non-window chrome wrapper
