--- a/styles/ui/window/_title-bar.scss
+++ b/styles/ui/window/_title-bar.scss
@@ -1,21 +1,64 @@
 @import "../../mixins";
 
-button.window-control {
-  -webkit-app-region: no-drag;
+#desktop-app-title-bar {
+  -webkit-app-region: drag;
+  -webkit-user-select: none;
+  flex-shrink: 0;
+  height: 20px;
+  width: 100%;
 
-  display: inline-block;
-  width: 30px;
-  height: 25px;
-  padding: 0;
-  margin: 0;
-  overflow: hidden;
-  border: none;
+  display: flex;
+  flex-direction: row;
 
-  color: #ccc;
-  background-color: transparent;
+  .app-title {
+    flex-grow: 1;
+    text-align: center;
 
-  &:hover {
-    background-color: #e7e7e7;
-    color: #333;
+    // This is cheating a bit but we'll use this to "push" the
+    // window controls to the right on Windows. We could also
+    // display: none and do flex-direction row-reverse.
+    visibility: hidden;
   }
+
+  // If you put a -webkit-app-region: drag element close to a window
+  // frame edge it prevents resizing so we move the title bar down
+  // 5px on windows to create a resize area equal to that of the sides
+  // and bottom of the app. We don't want to push the window controls
+  // down though so we'll compensate by giving them an equal but negative
+  // margin.
+  @include win32 {
+    margin-top: 5px;
+    .window-controls { margin-top: -5px }
+  }
+
+  // Don't ever show the title bar when we're in full screen mode.
+  @include in-fullscreen { display: none; }
+
+  .window-controls {
+
+    flex-grow: 0;
+
+    button {
+      -webkit-app-region: no-drag;
+
+      display: inline-block;
+      width: 30px;
+      height: 25px;
+      padding: 0;
+      margin: 0;
+      overflow: hidden;
+      border: none;
+
+      color: #ccc;
+      background-color: transparent;
+
+      &:hover {
+        background-color: #e7e7e7;
+        color: #333;
+      }
+    }
+
+  }
+
+
 }
