--- a/styles/ui/window/_title-bar.scss
+++ b/styles/ui/window/_title-bar.scss
@@ -35,10 +35,16 @@
   // Don't ever show the title bar when we're in full screen mode.
   @include in-fullscreen { display: none; }
 
+  // Window controls is the container for the three buttons minimize,
+  // maximize/restore and close. On macOS the controls are added
+  // automatically even for borderless window so we only render
+  // controls on Windows.
   .window-controls {
 
     flex-grow: 0;
 
+    // Each button contains a single SVG element with a Windows 10-replica
+    // icon for the function it represents
     button {
       -webkit-app-region: no-drag;
 
@@ -57,11 +63,17 @@
       &:hover {
         background-color: #e7e7e7;
 
+        // Doing :hover:active as oposed to just :active is
+        // a conscious choice to match how the real Windows
+        // controls behave when someone hovers, clicks and then
+        // moves away from the hitbox.
         &:active {
           background-color: #cccccc;
         }
       }
 
+      // Close button is a special case, it needs to be red
+      // on hover and slightly lighter red on active.
       &.close:hover {
         background-color: #e81123;
         fill: #fff;
@@ -73,6 +85,12 @@
 
       svg {
         position: absolute;
+
+        // These may seem arbitrary but in an uneven 45x29 box
+        // this positions the 10x10 icons centered but rounded
+        // down as opposed to rounded up which they'd be if we
+        // made the button a flexbox and told it to center the
+        // svg horizontally and vertically.
         top: 9px;
         left: 17px;
       }
