Fix default color

--- a/styles/ui/window/_title-bar.scss
+++ b/styles/ui/window/_title-bar.scss
@@ -57,7 +57,7 @@
       overflow: hidden;
       border: none;
 
-      color: #ccc;
+      color: #000;
       background-color: transparent;
 
       &:hover {
