--- a/styles/ui/window/_title-bar.scss
+++ b/styles/ui/window/_title-bar.scss
@@ -59,6 +59,7 @@
 
       color: #000;
       background-color: transparent;
+      transition: background-color 0.25s ease;
 
       &:hover {
         background-color: #e7e7e7;
