--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -39,18 +39,17 @@ html, body {
 
 html {
   // Sets a specific default `font-size` for user with `rem` type scales.
-  font-size: $font-size-root;
+  font-size: var(--font-size);
 }
 
 body {
-  // Make the `body` use the `font-size-root`
-  font-family: $font-family-base;
-  font-size: $font-size-base;
-  line-height: $line-height-base;
-  // Go easy on the eyes and use something other than `#000` for text
-  color: $primary-text-color;
-  // By default, `<body>` has no `background-color` so we set one as a best practice.
-  background-color: $primary-background-color;
+  // https://css-tricks.com/html-vs-body-in-css/
+  font-family: var(--font-family-sans-serif);
+  font-size: var(--font-size);
+  line-height: 1.5;
+
+  color: var(--text-color);
+  background-color: var(--background-color);
 }
 
 :not(input):not(textarea) {
