--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,24 +1,18 @@
 // Variables
 //
-// This files contains variables accessible to all other scss files.
-// Structure and naming copied largely from bootstrap, see
-// https://github.com/twbs/bootstrap/blob/bfc16c4a829ba596db28f5f42d7a3e429e6ea2e1/scss/_variables.scss
+// This files contains CSS variables accessible to all selectors
 
-// Colors
+:root {
+  // Colors
+  --text-color: #5f717f;
+  --background-color: #fff;
 
-$primary-text-color:          #5f717f;
-$primary-background-color:    #fff;
+  // Typography
+  //
+  // Font, line-height, and color for body text, headings, and more.
+  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
+  --font-family-monospace: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 
-// Typography
-//
-// Font, line-height, and color for body text, headings, and more.
-
-$font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif !default;
-$font-family-monospace:  Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-$font-family-base:       $font-family-sans-serif;
-
-// Pixel value used to responsively scale all typography. Applied to the `<html>` element.
-$font-size-root: 16px;
-$font-size-base: $font-size-root;
-
-$line-height-base: 1.5;
+  // Pixel value used to responsively scale all typography. Applied to the `<html>` element.
+  --font-size: 16px;
+}
