Variableize colors for the custom scroll bars on windows

--- a/styles/ui/_scroll.scss
+++ b/styles/ui/_scroll.scss
@@ -48,7 +48,7 @@
 
       // ...and when it's pressed we'll up the contrast
       &:active {
-        background-color: rgba(0, 0, 0, 0.5);
+        background-color: var(--scroll-bar-thumb-background-color-active);
       }
     }
   }
@@ -56,6 +56,15 @@
   // Only show the scroll bar on hover, we set its background-color
   // to transparent in the main declaration
   :hover::-webkit-scrollbar {
-    &-thumb { background-color: rgba(0, 0, 0, 0.2); }
+    &-thumb {
+      background-color: var(--scroll-bar-thumb-background-color);
+
+      // ...and when it's pressed we'll up the contrast, this is a duplicate
+      // of the rule above to have higher specificity than the
+      // :hover::-webkit-scrollbar-thumb selector. Not sure if there's a way
+      // to ever have the scrollbar be active without the container element
+      // being hovered but let's not take that risk.
+      &:active { background-color: var(--scroll-bar-thumb-background-color-active); }
+    }
   }
 }
