--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -15,4 +15,19 @@
 
   // Pixel value used to responsively scale all typography. Applied to the `<html>` element.
   --font-size: 16px;
+
+  /**
+   * Background color for custom scroll bars used on Windows.
+   * The color is applied to the thumb part of the scrollbar.
+   *
+   * Note: Only applies on win32 platforms
+   */
+  --scroll-bar-thumb-background-color: rgba(0, 0, 0, 0.2);
+
+  /**
+   * Main background color for custom scroll bars used on Windows.
+   *
+   * Note: Only applies on win32 platforms
+   */
+  --scroll-bar-thumb-background-color-active: rgba(0, 0, 0, 0.5);
 }
