Add a sidebar element to host the repository list and more

--- a/styles/ui/_app.scss
+++ b/styles/ui/_app.scss
@@ -25,4 +25,10 @@
     flex-direction: row;
     flex-grow: 1
   }
+
+  &-sidebar {
+    width: 270px;
+    display: flex;
+    flex-direction: column;
+  }
 }
