Some basic styling for lists

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -30,4 +30,7 @@
    * Note: Only applies on win32 platforms
    */
   --scroll-bar-thumb-background-color-active: rgba(0, 0, 0, 0.5);
+
+  --list-item-selected-background-color: #c9510c;
+  --list-item-selected-text-color: #f9f9f9;
 }
