--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -17,17 +17,18 @@
   --font-size: 16px;
 
   /**
-   * Background color for custom scroll bars used on Windows.
+   * Background color for custom scroll bars.
    * The color is applied to the thumb part of the scrollbar.
    *
-   * Note: Only applies on win32 platforms
+   * Note: Only applies to win32 platforms
    */
   --scroll-bar-thumb-background-color: rgba(0, 0, 0, 0.2);
 
   /**
-   * Main background color for custom scroll bars used on Windows.
+   * Background color for custom scroll bars in their active state.
+   * The color is applied to the thumb part of the scrollbar.
    *
-   * Note: Only applies on win32 platforms
+   * Note: Only applies to win32 platforms
    */
   --scroll-bar-thumb-background-color-active: rgba(0, 0, 0, 0.5);
 
