Reasonable default style for list items, vertically centered content, 100% width

--- a/styles/ui/_list.scss
+++ b/styles/ui/_list.scss
@@ -16,6 +16,12 @@
 
   background-color: var(--background-color);
 
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  width: 100%;
+
   &.selected {
     color: var(--list-item-selected-text-color);
     background-color: var(--list-item-selected-background-color);
