Add explicit selected+focused state for list items

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -32,6 +32,9 @@
    */
   --scroll-bar-thumb-background-color-active: rgba(0, 0, 0, 0.5);
 
-  --list-item-selected-background-color: #c9510c;
-  --list-item-selected-text-color: #f9f9f9;
+  --list-item-selected-background-color: #f2f2f2;
+  --list-item-selected-text-color: #5f717f;
+
+  --list-item-selected-focused-background-color: #c9510c;
+  --list-item-selected-focused-text-color: #f9f9f9;
 }
