--- a/styles/ui/_repository-list.scss
+++ b/styles/ui/_repository-list.scss
@@ -16,7 +16,7 @@
     }
 
     .name {
-      font-weight: 600;
+      font-weight: var(--font-weight-semibold);
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
