--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -37,9 +37,23 @@
    */
   --scroll-bar-thumb-background-color-active: rgba(0, 0, 0, 0.5);
 
+  /**
+   * Background color for selected list items without keyboard focus
+   */
   --list-item-selected-background-color: #f2f2f2;
+
+  /**
+   * Text color for selected list items without keyboard focus
+   */
   --list-item-selected-text-color: #5f717f;
 
+  /**
+   * Background color for selected list items with active keyboard focus
+   */
   --list-item-selected-focused-background-color: #c9510c;
+
+  /**
+   * Text color for selected list items with active keyboard focus
+   */
   --list-item-selected-focused-text-color: #f9f9f9;
 }
