--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -56,4 +56,10 @@
    * Text color for selected list items with active keyboard focus
    */
   --list-item-selected-focused-text-color: #f9f9f9;
+
+  /** The height of the title bar area on Win32 platforms */
+  --win32-title-bar-height: 30px;
+
+  /** The height of the title bar area on darwin platforms */
+  --darwin-title-bar-height: 20px;
 }
