--- a/styles/ui/window/_title-bar.scss
+++ b/styles/ui/window/_title-bar.scss
@@ -4,7 +4,6 @@
   -webkit-app-region: drag;
   -webkit-user-select: none;
   flex-shrink: 0;
-  height: 20px;
   width: 100%;
 
   display: flex;
@@ -20,6 +19,10 @@
     visibility: hidden;
   }
 
+  @include darwin {
+    height: var(--darwin-title-bar-height);
+  }
+
   // If you put a -webkit-app-region: drag element close to a window
   // frame edge it prevents resizing so we move the title bar down
   // 5px on windows to create a resize area equal to that of the sides
@@ -28,7 +31,7 @@
   // margin.
   @include win32 {
     margin-top: 5px;
-    height: 25px;
+    height: calc(var(--win32-title-bar-height) - 5px);
     .window-controls { margin-top: -5px }
   }
 
