--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -70,6 +70,21 @@ img {
   pointer-events: none;
 }
 
+//
+// Typography
+//
+
+// Remove top margins from headings
+//
+// By default, `<h1>`-`<h6>` all receive top and bottom margins. We nuke the top
+// margin for easier control within type scales as it avoids margin collapsing.
+//
+// From: https://github.com/twbs/bootstrap/blob/a0f10e6dcb9aef2d8e36e57f3c8b1b06034a8877/scss/_reboot.scss
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
+  margin-bottom: .5rem;
+}
+
 // Regardless of platform behavior we never want buttons to be
 // app drag targets unless explicitly specified.
 button {
