--- a/styles/ui/window/_title-bar.scss
+++ b/styles/ui/window/_title-bar.scss
@@ -21,6 +21,7 @@
 
   @include darwin {
     height: var(--darwin-title-bar-height);
+    z-index: 1;
   }
 
   // If you put a -webkit-app-region: drag element close to a window
