set up some platform specific structure

--- a/styles/ui/_scroll.scss
+++ b/styles/ui/_scroll.scss
@@ -65,3 +65,31 @@
     &:active { background-color: var(--scroll-bar-thumb-background-color-active); }
   }
 }
+
+@include win32-context {
+
+  &-thumb {
+
+    &:hover, &:active {
+
+    }
+
+    &:active {
+
+    }
+  }
+}
+
+@include darwin-context {
+
+  &-thumb {
+
+    &:hover, &:active {
+
+    }
+
+    &:active {
+
+    }
+  }
+}
