--- a/styles/ui/_scroll.scss
+++ b/styles/ui/_scroll.scss
@@ -38,12 +38,6 @@
     border-width: 0px 3px;
     background-clip: padding-box;
 
-    // When someone hovers over, or presses the bar we'll expand it to 8px
-    &:hover, &:active {
-      border-width: 0px 1px;
-      border-radius: 3px;
-    }
-
     // ...and when it's pressed we'll up the contrast
     &:active {
       background-color: var(--scroll-bar-thumb-background-color-active);
@@ -67,29 +61,27 @@
 }
 
 @include win32-context {
+  ::-webkit-scrollbar {
+    &-thumb {
 
-  &-thumb {
-
-    &:hover, &:active {
-
-    }
-
-    &:active {
-
+      // When someone hovers over, or presses the bar we'll expand it to 8px
+      &:hover, &:active {
+        border-width: 0px 1px;
+        border-radius: 3px;
+      }
     }
   }
 }
 
 @include darwin-context {
+  ::-webkit-scrollbar {
+    &-thumb {
+      border-radius: 10px;
 
-  &-thumb {
-
-    &:hover, &:active {
-
-    }
-
-    &:active {
-
+      // When someone hovers over, or presses the bar we'll expand it to 8px
+      &:hover, &:active {
+        border-width: 0px 1px;
+      }
     }
   }
 }
