Not just a windows problem :sob:

--- a/styles/ui/_repository-list.scss
+++ b/styles/ui/_repository-list.scss
@@ -3,23 +3,21 @@
 /** A <List> React component holding all tracked repositories in the sidebar */
 #repository-list {
 
+  // Go read _scroll.scss, we're unable to extend the list items all
+  // the way out to the edge of the list because the scrollbar forces
+  // a margin that we can't get past. So we'll render with
+  // a bit of a rounded right edge to make it appear as if it's intentional
   .list-item {
     border-radius: 0 5px 5px 0;
   }
 
-  // Go read _scroll.scss, we're unable to extend the list items all
-  // the way out to the edge of the list because the scrollbar forces
-  // a margin that we can't get past. So on Windows we'll render with
-  // a bit of a rounded right edge to make it appear as if it's intentional
-  @include win32 {
-    // Since the scroll bar decreases the inner width of the contianer on Windows
-    // it'll appear as if the list items jump around when the scrollbar is added
-    // or removed. That coupled with the fact that the list items have a rounded
-    // forces us to always enable the scroll bar on Windows. The thumb won't be
-    // visible until the content is actually scrollable so essentially this is
-    // magic padding.
-    overflow-y: scroll;
-  }
+  // Since the scroll bar decreases the inner width of the contianer
+  // it'll appear as if the list items jump around when the scrollbar is added
+  // or removed. That coupled with the fact that the list items have a rounded
+  // forces us to always enable the scroll bar. The thumb won't be
+  // visible until the content is actually scrollable so essentially this is
+  // magic padding.
+  overflow-y: scroll;
 
   /**
    * Container for repository list items in the sidebar
