--- a/styles/_ui.scss
+++ b/styles/_ui.scss
@@ -5,3 +5,13 @@
 @import "ui/sidebar";
 @import "ui/list";
 @import "ui/repository-list";
+@import "ui/changes-list";
+@import "ui/changes";
+@import "ui/commit-summary";
+@import "ui/commit-list";
+@import "ui/commit-message";
+@import "ui/comparison-graph";
+@import "ui/file-diff";
+@import "ui/history";
+@import "ui/repository";
+@import "ui/toolbar";
