Stub out history too

--- a/styles/ui/_commit-list.scss
+++ b/styles/ui/_commit-list.scss
@@ -3,7 +3,9 @@
 /** A React component holding history's commit list */
 #commit-list {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  flex: 1;
 
+  text-align: center;
   border-style: solid;
 }
