--- a/styles/ui/_history.scss
+++ b/styles/ui/_history.scss
@@ -3,7 +3,8 @@
 /** A React component holding the currently selected repository's history */
 #history {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex: 1;
 
   border-style: solid;
 }
