Implement tab switching.

--- a/styles/ui/_toolbar.scss
+++ b/styles/ui/_toolbar.scss
@@ -5,7 +5,14 @@
   display: flex;
   flex-direction: column;
   height: 34px;
+  align-items: center;
 
-  text-align: center;
   border-style: solid;
+
+  /** A React component holding the tab bar */
+  #tab-bar {
+    .selected {
+      font-weight: bolder;
+    }
+  }
 }
