--- a/styles/ui/_toolbar.scss
+++ b/styles/ui/_toolbar.scss
@@ -8,11 +8,11 @@
   align-items: center;
 
   /** A React component holding the tab bar */
-  .tab-bar {
+  .segmented-control {
     font-size: 12px;
   }
 
-  .tab-bar-item {
+  .segmented-control-item {
     background: #EBEBEB;
     padding: 5px 10px;
     margin-right: 1px;
@@ -26,7 +26,7 @@
     }
   }
 
-  .tab-bar-item-selected {
+  .segmented-control-item-selected {
     background-color: #3D76C2;
     color: #fff;
   }
