--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -4,7 +4,10 @@
 
 :root {
   // Colors
-  --text-color: #5f717f;
+  --dark-gray: #5f717f;
+  --light-gray: #EBEBEB;
+
+  --text-color: var(--dark-gray);
   --background-color: #fff;
 
   // Typography
@@ -19,7 +22,7 @@
   --font-weight-semibold: 600;
 
   // Pixel value used to responsively scale all typography. Applied to the `<html>` element.
-  --font-size: 15px;
+  --font-size: 14px;
 
   /**
    * Background color for custom scroll bars.
