--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -18,6 +18,12 @@
   --text-color: $darkGray;
   --background-color: white;
 
+  --border-color: var(--text-color);
+  --border-radius: 3px;
+
+  --margin: 10px;
+  --padding: var(--margin);
+
   // Typography
   //
   // Font, line-height, and color for body text, headings, and more.
