--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -21,6 +21,8 @@
   --border-color: var(--text-color);
   --border-radius: 3px;
 
+  --form-border-color: #e3e7e9;
+
   --margin: 10px;
   --padding: var(--margin);
 
