--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -97,3 +97,13 @@ button {
   height: 100%;
   width: 100%;
 }
+textarea {
+  border: 1px solid var(--input-border-color);
+  border-radius: var(--border-radius);
+  color: currentColor;
+  display: block;
+  font-size: var(--font-size);
+  min-height: 100px;
+  padding: var(--padding);
+  width: 100%;
+}
