--- a/styles/ui/_toolbar.scss
+++ b/styles/ui/_toolbar.scss
@@ -18,11 +18,11 @@
   padding: 5px 20px;
 
   &:first-child {
-    border-radius: 3px 0px 0px 3px;
+    border-radius: var(--border-radius) 0px 0px var(--border-radius);
   }
 
   &:last-child {
-    border-radius: 0px 3px 3px 0px;
+    border-radius: 0px var(--border-radius) var(--border-radius) 0px;
   }
 }
 
