--- a/styles/ui/_toolbar.scss
+++ b/styles/ui/_toolbar.scss
@@ -21,7 +21,7 @@
     border-radius: 0px var(--border-radius) var(--border-radius) 0px;
   }
 
-  &-selected {
+  &.selected {
     background-color: var(--dark-gray);
     color: var(--background-color);
   }
