Remove a bunch of :shit:

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -21,8 +21,6 @@
   --border-color: var(--text-color);
   --border-radius: 3px;
 
-  --form-border-color: #e3e7e9;
-
   --margin: 10px;
   --padding: var(--margin);
 
@@ -103,4 +101,6 @@
 
   /** The height of the title bar area on darwin platforms */
   --darwin-title-bar-height: 37px;
+
+  --input-border-color: #e3e7e9;
 }
