Rename to less specific prefix for list item colors

--- a/styles/ui/_segmented-control.scss
+++ b/styles/ui/_segmented-control.scss
@@ -13,7 +13,7 @@
   }
 
   &.selected {
-    background-color: var(--dark-gray);
-    color: var(--background-color);
+    background-color: var(--box-selected-background-color);
+    color: var(--box-selected-text-color);
   }
 }
