Use border color variable in segmented control

--- a/styles/ui/_segmented-control.scss
+++ b/styles/ui/_segmented-control.scss
@@ -1,7 +1,7 @@
 .segmented-control-item {
   --border-radius: 5px;
 
-  border: 1px solid var(--text-color);
+  border: 1px solid var(--box-border-color);
   border-right-width: 0;
   padding: 5px 20px;
 
