Remove color variable

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,10 +3,8 @@
 // This files contains CSS variables accessible to all selectors
 
 :root {
-  // Colors
-  --dark-gray: #5f717f;
 
-  --text-color: var(--dark-gray);
+  --text-color: #5f717f;
   --background-color: #fff;
 
   // Typography
