a bit of styling

--- a/styles/ui/_changes-list.scss
+++ b/styles/ui/_changes-list.scss
@@ -7,4 +7,15 @@
   flex: 1;
 
   border-style: solid;
+
+  overflow-y: scroll;
+}
+
+#changes-list ul {
+  list-style-type: none;
+}
+
+#changes-list li {
+  margin-left: -35px;
+  white-space: nowrap;
 }
