--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -108,3 +108,18 @@ textarea {
   padding: var(--padding);
   width: 100%;
 }
+
+.btn {
+  background-color: #fff;
+  color: #333;
+  padding: 5px 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  font-size: 12px;
+  font-weight: 600;
+  margin-top: 10px;
+
+  &:hover {
+    background-color: #eee;
+  }
+}
