--- a/styles/ui/_segmented-control.scss
+++ b/styles/ui/_segmented-control.scss
@@ -4,6 +4,10 @@
     --border-radius: 5px;
 
     border: 1px solid var(--box-border-color);
+
+    // This makes it so that we never render a double-width item border.
+    // It has the unintended consequence of making it impossible to have
+    // a segmented-control with just one item but we can live with that.
     border-right-width: 0;
     padding: 5px 20px;
 
