--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -103,4 +103,7 @@
   --darwin-title-bar-height: 37px;
 
   --input-border-color: #e3e7e9;
+
+  --button-background: #fafafa;
+  --button-hover-background: #fff;
 }
