--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -98,36 +98,6 @@ button {
   width: 100%;
 }
 
-textarea {
-  transition: all 0.25s;
-  border: 1px solid var(--input-border-color);
-  border-radius: var(--border-radius);
-  color: currentColor;
-  font-size: var(--font-size);
-  min-height: 100px;
-  padding: var(--padding);
+.full-width {
   width: 100%;
-
-  &:focus {
-    box-shadow: 0 0 0 2px var(--input-border-hover-color);
-  }
-}
-
-.btn {
-  background-color: var(--button-background);
-  box-shadow: 0 1px 1px rgba(5, 5, 5, 0.04);
-  color: var(--text-color);
-  padding: 5px 10px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  font-size: 12px;
-  margin-top: 10px;
-
-  &:hover {
-    background-color: var(--button-hover-background);
-  }
-
-  &:active {
-    box-shadow: inset 0 0 1px rgba(5, 5, 5, 0.15);
-  }
 }
