--- a/styles/_ui.scss
+++ b/styles/_ui.scss
@@ -1,4 +1,6 @@
 @import "ui/app";
+@import "ui/forms";
+@import "ui/buttons";
 @import "ui/scroll";
 @import "ui/window/title-bar";
 @import "ui/octicons";
