--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -21,8 +21,7 @@
   --border-color: var(--text-color);
   --border-radius: 3px;
 
-  --margin: 10px;
-  --padding: var(--margin);
+  --spacing: 10px;
 
   // Typography
   //
@@ -103,7 +102,7 @@
   --darwin-title-bar-height: 37px;
 
   --input-border-color: #e3e7e9;
-  --input-border-hover-color: #4A90E2;
+  --input-border-hover-color: #4CA6EB;
 
   --button-background: #fafafa;
   --button-hover-background: #fff;
