a bit of style cleanup

--- a/styles/ui/_changes-list.scss
+++ b/styles/ui/_changes-list.scss
@@ -13,9 +13,15 @@
 
 #changes-list ul {
   list-style-type: none;
+  margin-top: 0px;
 }
 
 #changes-list li {
   margin-left: -35px;
   white-space: nowrap;
+}
+
+#changes-list #select-all input[type=checkbox] {
+  margin-left: 9px;
+  margin-top: 10px;
 }
