--- a/styles/ui/_commit-message.scss
+++ b/styles/ui/_commit-message.scss
@@ -4,6 +4,7 @@
 #commit-message {
   border-top: 1px solid var(--input-border-color);
   flex-direction: row;
+  align-self: flex-end;
   margin-top: auto;
 }
 
