--- a/styles/ui/_forms.scss
+++ b/styles/ui/_forms.scss
@@ -1,4 +1,9 @@
-input, textarea {
+input[type='text'],
+input[type='date'],
+input[type='email'],
+input[type='range'],
+input[type='search'],
+textarea {
   transition: all 0.25s;
   border: 1px solid var(--input-border-color);
   border-radius: var(--border-radius);
