--- a/styles/ui/_changes-list.scss
+++ b/styles/ui/_changes-list.scss
@@ -10,3 +10,12 @@
 
   overflow-y: scroll;
 }
+
+#changes-list .path {
+  font-weight: bold;
+}
+
+#changes-list .status {
+  margin-left: 10px;
+  font-style:italic;
+}
